# SalesBuff-Pre-Call

./: .gitignore  CONTEXT.md  CONTRIBUTING.md  README.md  render.yaml
.github/: dependabot.yml  dependency-review-config.yml
.github/workflows/: ci.yml  codeql.yml
SalesBuff/: ARCHITECTURE.md  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
SalesBuff/SalesBiff-Frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
SalesBuff/SalesBiff-Frontend/src/: styles.css
SalesBuff/SalesBiff-Frontend/src/components/salesbuff/: BrandMark.tsx  BriefCard.tsx  CardList.tsx  CitationsPanel.tsx  FactsView.tsx  Pills.tsx  RecordButton.tsx  ResultsHeader.tsx  RichText.tsx  VoiceBar.tsx  pill.constants.ts
SalesBuff/SalesBiff-Frontend/src/hooks/: use-live-coaching.ts  use-speech-recorder.ts
SalesBuff/SalesBiff-Frontend/src/lib/: citation.utils.ts  theme.ts
SalesBuff/SalesBiff-Frontend/src/lib/api/: onfly.functions.ts  research.functions.ts
SalesBuff/SalesBiff-Frontend/src/routes/: __root.tsx  index.tsx
SalesBuff/salesbuff/: .env.example  .gitignore  __init__.py  __main__.py  api.py  cli.py  client.py  config.py  container.py  core.py  metrics.py  pipeline.py  requirements.txt  utils.py
SalesBuff/salesbuff/adapters/: __init__.py  courtlistener.py  openai_llm.py  tavily.py
SalesBuff/salesbuff/domain/: brief_rules.py  framing.py  prompts.py  queries.py  questions.py  sales_logic.py  sources.py
SalesBuff/salesbuff/domain_logic_sales/: README.md
SalesBuff/salesbuff/domain_logic_sales/categories/: categories.yaml
SalesBuff/salesbuff/domain_logic_sales/question_bank/: questions.yaml
SalesBuff/salesbuff/domain_logic_sales/ranking/: ranking.yaml
SalesBuff/salesbuff/models/: __init__.py  brief.py  entities.py  onfly.py
SalesBuff/salesbuff/onfly/: __init__.py  api.py  coach.py  prompts.py  session.py
SalesBuff/salesbuff/precall/: brief.py  legal.py  resolve.py
SalesBuff/salesbuff/research/: __init__.py  brief.py  deep.py  facts.py  legal.py  resolve.py  schema.py  web.py
